# etl-python-duckdb-do-zero

./: .env  Dockerfile  README.md  duckdb.db  pipeline_00.py  pipeline_02_diferente_arquivos.py.py  pyproject.toml
pasta_gdown/: Vendas_05_01_2024.csv  Vendas_06_01_2024.csv
src/: duckdb.db
