[tool.poetry]
name = "etl-python-duckdb-do-zero"
version = "0.1.0"
description = ""
authors = ["gaocubo <contato@gao3.com.br>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
gdown = "^5.2.0"
duckdb = "^1.1.3"
streamlit = "^1.41.1"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.37"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
